# Jetson_Nano_Rover_ROS2

./: .gitignore  README.md
docs/: SETUP_DOCS.md
robot_control/: package.xml  (+1 more)
robot_control_v3/rover_interfaces/: CMakeLists.txt  package.xml
robot_control_v3/rover_interfaces/msg/: MotionCommand.msg  RoverStatus.msg  RoverWheelsState.msg  TrajectoryStatus.msg  WheelCommand.msg  WheelState.msg
robot_control_v3/rover_interfaces/srv/: ResetOdometry.srv  StartStraightTrajectory.srv
robot_control_v3/rover_nodes/: package.xml  setup.py
robot_control_v3/rover_nodes/config/: robot_params.yaml
robot_control_v3/rover_nodes/launch/: dualshock4_control.launch.py  keyboard_control.launch.py  robot_bringup.launch.py  trajectory_control.launch.py
robot_control_v3/rover_nodes/rover_nodes/: ackermann_calculator_node.py  dualshock4_controller_node.py  flag_safety_node.py  keyboard_controller_node.py  odometry_node.py  rover_status_node.py  serial_controller_node.py  straight_trajectory_node.py
rover_description/: CMakeLists.txt  README.md  package.xml
rover_description/config/: controllers.yaml
rover_description/launch/: display.launch.py  display_gazebo.launch.py  figure_eight.launch.py  figure_lemniscate.launch.py  gazebo.launch.py  gazebo_sim.launch.py  robot_description.launch.py  sim.launch.py
rover_description/meshes/: Bogie_L.STL  Bogie_L.dae  Bogie_R.STL  Bogie_R.dae  Differ.STL  Differ.dae  Differ_L.dae  Differ_R.dae  Rocker_L.STL  Rocker_L.dae  Rocker_R.STL  Rocker_R.dae  Rorate_L_REAR.dae  Rotate_R_FRONT.STL  Rotate_R_FRONT.dae  Rotate_R_REAR.STL  Rotate_R_REAR.dae  Rotate__L_FRONT.STL  Rotate__L_FRONT.dae  Tiaga_L.STL  Tiaga_L.dae  Tiaga_R.STL  Tiaga_R.dae  WHEEL_L_REAR.STL  WHEEL_L_REAR.dae  Wheel_L_FRONT.STL  Wheel_L_FRONT.dae  Wheel_L_MIDDLE.STL  Wheel_L_MIDDLE.dae  Wheel_R_FRONT.STL  Wheel_R_FRONT.dae  Wheel_R_MIDDLE.STL  Wheel_R_MIDDLE.dae  Wheel_R_REAR.STL  Wheel_R_REAR.dae  base_link.STL  base_link.dae
rover_description/rviz/: rover.rviz  rover_sim.rviz
rover_description/scripts/: ackermann_gazebo_node.py  ackermann_sim_node.py  figure_eight.py  figure_eight_rviz.py  figure_lemniscate_rviz.py  path_publisher.py  robot_keyboard_controller.py
rover_description/urdf/: gazebo_plugins.xacro  rover.urdf.xacro
rover_description/worlds/: empty.world
(+34 files in other folders)
