<?xml version="1.0"?>
<package format="3">
  <name>rover_interfaces</name>
  <version>3.0.0</version>
  <description>Custom ROS2 messages and services for rover control</description>
  <maintainer email="rover@robot.com">rover</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export><build_type>ament_cmake</build_type></export>
</package>
