<?xml version="1.0"?>
<package format="3">
  <name>rover_nodes</name>
  <version>3.0.0</version>
  <description>Rover control v3: keyboard, dualshock4, ackermann, serial, odometry, flag_safety, trajectory</description>
  <maintainer email="rover@robot.com">rover</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rover_interfaces</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>python3-serial</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
